# PointerScan

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp  test.cpp
include/common/: cmd_parser.h  thread_pool.h  types.h
include/memory/: file_cache.h  mem_access.h  mem_map.h  memory_cache.h
include/scanner/: formatter.h  pointer_chain.h  scanner copy.h  scanner.h
outputs/: test_example
src/common/: cmd_parser.cpp  thread_pool.cpp
src/memory/: CMakeLists.txt  file_cache.cpp  mem_access.cpp  mem_map.cpp  memory_cache.cpp
src/scanner/: formatter.cpp  pointer_chain.cpp  scanner.cpp
